# ResDigit_Net

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: python-tests.yml
Create_Model/: DataProcessorer.py  data.py  data_loader.py  data_transform.py  inspect_data_quality.py  main_train.py  tools.py  train.py
Create_Model/Model_Architecture/: Model_BasicVisionTransformer.py  Model_ModernCNN.py  __init__.py
Model_Handler_PTH/: CV_Processor.py  Inference Aggregator.py  Inference_Handler.py
digits-backend/: main.py
digits-frontend/: index.html  package-lock.json  package.json
digits-frontend/src/: App.css  App.jsx
