[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RESCIGIT_NET"
version = "1.0.0"
description = "A project to test and build various number recognition models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sobhan Nasiri", email = "sobhannasiri17@gmail.com" }
]
keywords = ["deep-learning", "pytorch", "cnn", "computer-vision", "React", "FastAPI", "RNN"]

dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "numpy>=1.26.4",
    "matplotlib>=3.9.1",
    "fastapi>=0.128.7",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "opencv-python>=4.7.0",
    "tqdm",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
"*" = ["*.txt", "*.pth"]